--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "better-sqlite3": "^12.6.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^7.0.0"
   }
